shellclear/src/snapshots/shellclear__engine__test_engine__can_clear_command_by_lines-3.snap
---
source: shellclear/src/engine.rs
expression: "fs::read_to_string(state_context.history.path)"
---
Ok(
    "history\nls\necho 'hello you'\nrm -f ./file.txt\n",
)
