shellclear/src/snapshots/shellclear__engine__test_engine__can_clear_command_by_lines.snap
---
source: shellclear/src/engine.rs
expression: result
---
Ok(
    [
        FindingSensitiveCommands {
            shell_type: Bash,
            sensitive_findings: [],
            command: "history",
            data: "history",
        },
        FindingSensitiveCommands {
            shell_type: Bash,
            sensitive_findings: [],
            command: "ls",
            data: "ls",
        },
        FindingSensitiveCommands {
            shell_type: Bash,
            sensitive_findings: [],
            command: "echo 'hello you'",
            data: "echo 'hello you'",
        },
        FindingSensitiveCommands {
            shell_type: Bash,
            sensitive_findings: [],
            command: "rm -f ./file.txt",
            data: "rm -f ./file.txt",
        },
        FindingSensitiveCommands {
            shell_type: Bash,
            sensitive_findings: [
                SensitiveCommands {
                    test: DELETE_ME,
                    name: "test",
                },
            ],
            command: "export DELETE_ME=token",
            data: "export DELETE_ME=token",
        },
    ],
)
