shellclear/src/snapshots/shellclear__engine__test_engine__can_ignore_patterns.snap
---
source: shellclear/src/engine.rs
expression: result
---
Ok(
    Findings {
        patterns: [
            FindingSensitiveCommands {
                shell_type: Bash,
                sensitive_findings: [],
                command: "history",
                data: "history",
            },
            FindingSensitiveCommands {
                shell_type: Bash,
                sensitive_findings: [],
                command: "ls",
                data: "ls",
            },
            FindingSensitiveCommands {
                shell_type: Bash,
                sensitive_findings: [],
                command: "echo 'hello you'",
                data: "echo 'hello you'",
            },
            FindingSensitiveCommands {
                shell_type: Bash,
                sensitive_findings: [],
                command: "rm -f ./file.txt",
                data: "rm -f ./file.txt",
            },
            FindingSensitiveCommands {
                shell_type: Bash,
                sensitive_findings: [],
                command: "export FIND_ME=token",
                data: "export FIND_ME=token",
            },
        ],
    },
)
